# codex-dobby-mcp

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/codex_dobby_mcp/: __init__.py  __main__.py  background_runs.py  codex_cli.py  gitignore.py  logging_utils.py  mcp_spec_patches.py  models.py  paths.py  prompts.py  review_agents.py  runner.py  safeguards.py  server.py  snapshot_worker.py
src/codex_dobby_mcp/assets/codex_agents/: review-architecture.toml  review-correctness.toml  review-generalist.toml  review-performance.toml  review-regression.toml  review-security.toml  review-ux.toml
src/codex_dobby_mcp/assets/prompts/: brainstorm.md  build.md  plan.md  research.md  reverse_engineer.md  review-single.md  review.md  shared.md  validate.md
src/codex_dobby_mcp/assets/schemas/: worker-output.schema.json
tests/: test_background_runs.py  test_codex_cli.py  test_gitignore.py  test_mcp_spec_patches.py  test_packaging.py  test_paths.py  test_prompt_loading.py  test_recursion_guard.py  test_review_agents.py  test_runner_schema.py  test_server.py
