[project]
name = "codex-dobby-mcp"
version = "0.1.0"
description = "Local stdio MCP delegation server that routes Claude-orchestrated tasks through codex exec"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Avery Levitt", email = "avery23@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pydantic>=2.12.5",
]

[project.scripts]
codex-dobby-mcp = "codex_dobby_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
